<resources>
    <string name="app_name">EstadisticasNBA</string>
    <string name="imagen_de_la_conferencia_este">Imagen de la conferencia ESTE</string>
    <string name="imagen_del_trofeo_de_la_liga">Imagen del trofeo de la liga</string>
    <string name="imagen_de_la_conferencia_oeste">Imagen de la conferencia OESTE</string>
    <string name="nombre_del_equipo">Nombre del equipo</string>
    <string name="abreviatura_del_equipo">Abreviatura del equipo</string>
    <string name="arena_del_equipo">Arena del equipo</string>
    <string name="imagen_del_equipo">imagen del equipo</string>
    <string name="nombre">nombre</string>
    <string name="edad">edad</string>
    <string name="altura">altura</string>
    <string name="imagen_del_jugador">imagen del jugador</string>
    <string name="lblNombre">Nombre:</string>
    <string name="lblEdad">Edad:</string>
    <string name="lblAltura">Altura:</string>
    <string name="titulo_equipos">Equipos</string>
    <string name="titulo_conferencias">Conferencias</string>
    <string name="img_fondo_equipos">img_fondo_equipos</string>
    <string name="imagen_fondo_jugadores">imagen_fondo_jugadores</string>
    <string name="actualizar">ACTUALIZAR</string>
    <string name="borrar">BORRAR</string>
    <string name="grafico">GRAFICO</string>
    <string name="puntos_por_partido">Puntos por partido:</string>
    <string name="ppp">ppp</string>
    <string name="asistencias_por_partido">Asistencias por partido:</string>
    <string name="rebotes_por_partido">Rebotes por partido:</string>
    <string name="app">app</string>
    <string name="rpp">rpp</string>
    <string name="img_detalle_jugador">img_detalle_jugador</string>
    <string name="img_fondo_conferencia">img_fondo_conferencia</string>
    <string name="vacio" translatable="false"></string>
    <string name="editar">Editar</string>
    <string name="imagen_a_adir_jugador">imagen_añadir_jugador</string>
    <string name="lblAddNombre">Nombre:</string>
    <string name="lblAddApellido">Apellido:</string>
    <string name="lblAddEdad">Edad:</string>
    <string name="lblAddAltura">Altura:</string>
    <string name="imagen_aniadir_jugador">imagen_aniadir_jugador</string>
    <string name="crear_jugador">CREAR JUGADOR</string>
    <string name="apellido_del_jugador">apellido del jugador</string>
    <string name="nombre_del_jugador">nombre del jugador</string>
    <string name="edad_del_jugador">edad del jugador</string>
    <string name="altura_del_jugador">altura del jugador</string>
    <string name="usuario">USUARIO</string>
    <string name="nombre_de_usuario">nombre de usuario</string>
    <string name="contrase_a">contraseña</string>
    <string name="contrasenia">CONTRASEÑA</string>
    <string name="imglogin">imgLogin</string>
    <string name="acceder">ACCEDER</string>
</resources>