<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco_roto"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/lblNombreUsuario"
        style="@style/Casual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/leftNormalConstraint"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="@dimen/RightNormalConstraint"
        android:text="@string/usuario"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/txtNombreUsuario"
        style="@style/Italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/leftNormalConstraint"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/RightNormalConstraint"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nombre_de_usuario"
        android:inputType="textPersonName"
        android:text="@null"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblNombreUsuario" />

    <TextView
        android:id="@+id/lblPassword"
        style="@style/Casual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/leftNormalConstraint"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/RightNormalConstraint"
        android:text="@string/contrasenia"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreUsuario" />

    <EditText
        android:id="@+id/txtContrasenia"
        style="@style/Italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/leftNormalConstraint"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/RightNormalConstraint"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:text="@null"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPassword" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/leftNormalConstraint"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/RightNormalConstraint"
        android:contentDescription="@string/imglogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/loguearse" />

    <Button
        android:id="@+id/btnAcceder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/leftNormalConstraint"
        android:layout_marginEnd="@dimen/RightNormalConstraint"
        android:layout_marginBottom="@dimen/bottomNormalConstraint"
        android:backgroundTint="@color/azul_nba"
        android:text="@string/acceder"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>