<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/cardMargin"
    android:drawingCacheQuality="high"
    android:fadeScrollbars="false"
    android:filterTouchesWhenObscured="false"
    android:fitsSystemWindows="false"
    android:focusableInTouchMode="false"
    android:focusedByDefault="false"
    android:forceHasOverlappingRendering="false"
    android:orientation="vertical"
    android:soundEffectsEnabled="false">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvJugador"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@drawable/court"
        app:cardBackgroundColor="@color/blanco_roto"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gris_claro"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgJugador"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:baselineAlignBottom="false"
                android:contentDescription="@string/imagen_del_jugador"
                app:srcCompat="@drawable/nba" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/gris_claro"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/lblPpp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/cardMargin"
                        android:text="@string/lblNombre"
                        android:textSize="12sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/txtNombreJugador"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/cardMargin"
                        android:hint="@string/nombre"
                        android:textSize="12sp"
                        android:textStyle="bold|italic" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/design_default_color_background"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/lblEdad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/cardMargin"
                        android:text="@string/lblEdad"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtEdadJugador"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/cardMargin"
                        android:hint="@string/edad"
                        android:textSize="12sp"
                        android:textStyle="italic" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/gris_claro"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/lblAltura"
                        style="@style/Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/cardMargin"
                        android:text="@string/lblAltura"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txtAlturaJugador"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/cardMargin"
                        android:hint="@string/altura"
                        android:textSize="12sp"
                        android:textStyle="italic" />
                </TableRow>

            </TableLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>