<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AniadirJugadorActivity">

    <ImageView
        android:id="@+id/imgAddJugador"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/imagen_aniadir_jugador"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/lblAddNombre"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/lblAddNombre"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtAddNombre"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/separacionEditText"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:inputType="text"
                android:text="@null" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/lblAddApellido"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/lblAddApellido"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtAddApellido"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/separacionEditText"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text"
                android:text="@null" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/lblAddEdad"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/lblAddEdad"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtAddEdad"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/separacionEditText"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:ems="10"
                android:enabled="true"
                android:inputType="number"
                android:text="@null" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/lblAddAltura"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/lblAddAltura"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtAddAltura"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/separacionEditText"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="@null" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnAniadirJugador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/crear_jugador" />


</LinearLayout>