<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="@dimen/cardMargin"
    android:drawingCacheQuality="high"
    android:fadeScrollbars="false"
    android:filterTouchesWhenObscured="false"
    android:fitsSystemWindows="false"
    android:focusableInTouchMode="false"
    android:focusedByDefault="false"
    android:forceHasOverlappingRendering="false"
    android:measureWithLargestChild="false"
    android:orientation="vertical"
    android:soundEffectsEnabled="false">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvEquipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gris_claro">

            <ImageView
                android:id="@+id/imgEquipo"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:baselineAlignBottom="false"
                android:contentDescription="@string/imagen_del_equipo"
                app:srcCompat="@color/blanco_roto"
                tools:srcCompat="@drawable/nba" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txtNombreEquipo"
                        style="@style/Bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/cardMargin"
                        android:hint="@string/nombre_del_equipo"
                        android:textAlignment="center" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/design_default_color_background"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txtAbreviaturaEquipo"
                        style="@style/Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/cardMargin"
                        android:hint="@string/abreviatura_del_equipo"
                        android:textAlignment="center" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txtArenaEquipo"
                        style="@style/Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/cardMargin"
                        android:hint="@string/arena_del_equipo"
                        android:textAlignment="center" />
                </TableRow>

            </TableLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>